# termsaver

./: .gitignore  .project  .pydevproject  CHANGELOG  FAQ.md  MANIFEST.in  README  README.md  TODO  __init__.py  pyproject.toml  setup.py  setup_old.py  termsaver  termsaver.py
completion/: _termsaver  termsaver-completion.bash
data/: sw1.txt
debian/: changelog  control  copyright  install  links  rules  termsaver.bash-completion  termsaver.preinst  termsaver.prerm  watch
debian/bash_completion/: termsaver
doc/: termsaver.1
extras/: README.dist  compile_l10n.py  deb_package.sh  readme_render.py  ubuntu_package.sh  update_l10n.sh  upload_dist.sh
locale/: ja.po
locale/en/LC_MESSAGES/: termsaver.mo  termsaver.po
locale/ja/LC_MESSAGES/: termsaver.mo
locale/pt/LC_MESSAGES/: termsaver.mo  termsaver.po
termsaver/: __init__.py  __main__.py
termsaver/termsaverlib/: __init__.py  common.py  constants.py  i18n.py
termsaver/termsaverlib/helper/: smartformatter.py  utilities.py
termsaver/termsaverlib/plugins/: __init__.py
termsaver/termsaverlib/screen/: __init__.py  asciiartfarts.py  clock.py  clocknumber for tremsaver.xlsm  (+12 more)
termsaverlib/: common.py  constants.py  exception.py  i18n.py
termsaverlib/helper/: __init__.py
termsaverlib/plugins/: __init__.py
termsaverlib/screen/: __init__.py  asciiartfarts.py  clock.py  clocknumber for tremsaver.xlsm  dot.py  img2ascii.py  jokes4all.py  matrix.py  programmer.py  quotes4all.py  randtxt.py  rfc.py  rssfeed.py  starwars.py  sysmon.py  urlfetcher.py  wttr.py
tests/: readme_render.py  screentests.py  test.py
(+28 files in other folders)
